syntax = "proto3";

option java_package = "grpc";

service GetService{
	rpc GetAllStudent(UserId) returns (StudentList);
	rpc GetAllCourse(UserId) returns (CourseList);
	rpc GetAllAccount(UserId) returns (AccountList);
}

service AddService{
	rpc AddStudent(DataInfo) returns (ExceptionMessage);
	rpc AddCourse(DataInfo) returns (ExceptionMessage);
	rpc MakeReservation(DataInfo) returns(ExceptionMessage);
	rpc AddAccount(DataInfo) returns (ExceptionMessage);
	rpc AddLog(DataInfo) returns (Null);
}

service DeleteService{
	rpc DeleteStudent(DataInfo) returns (ExceptionMessage);
	rpc DeleteCourse(DataInfo) returns (ExceptionMessage);
}

service LoginService{
	rpc Login(DataInfo) returns (ExceptionMessage);
	rpc SignUp(DataInfo) returns (ExceptionMessage);
}

message Null{
}

message UserId{
	string userId = 1;
}

message DataInfo{
	string userId = 1;
	string Info = 2;
}

message ExceptionMessage{
	string message = 1;
}

message Student{
	string studentId = 1;
	string name = 2;
	string department = 3;
	repeated string completedCourse = 4;
	repeated string reservedCourse = 5;
}

message Course{
	string courseId = 1;
	string professorName = 2;
	string courseName = 3;
	repeated string prerequisite = 4;
	repeated string reservedStudent = 5;
}

message Account{
	string id = 1;
	string password = 2;
}

message StudentList{
	repeated Student student = 1;
	string exception = 2;
}

message CourseList{
	repeated Course course = 1;
	string exception = 2;
}

message AccountList{
	repeated Account account = 1;
	string exception = 2;
}